# Predictor-COVID

./: .gitignore  Dockerfile  README.md  iv.yaml  iv.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.circleci/: config.yml
.github/workflows/: deploy_and_test_docker.yaml  deploy_docker.yaml  deploy_docker_python3.10.yaml  test_docker.yaml
doc/: objetivo1.md
docker-test-p10/: Dockerfile  pyproject.toml
docs/: objetivo1.md  objetivo3.md  objetivo4.md  objetivo5.md  objetivo6.md
prediccion/: Datos.py  Interpretacion.py  Prediccion.py  config.py  datos.py  gestor_interpretacion.py  interpretacion.py
src/: Datos.py  Graficas.py  Interpretacion.py  Prediccion.py  main.py
tests/: datos_prueba.csv  test.py  test_gestor_interpretacion.py  test_interpretacion.py
