[tool.poetry]
name = "prediccion"
version = "0.1.0"
description = "Proyecto para interpretar los datos de covid por regiones y hacer graficas y hacer pequeñas predicciones"
authors = ["Mapachana"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
DateTime = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
