[tool.poetry]
name = "predictor-covid"
version = "0.1.0"
description = "Proyecto para interpretar y generar graficas sobre los ultimos datos del covid, tambien podra generar pequeñas predicciones"
authors = ["Mapachana"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
